Upgrade to Spring Boot 4.0 API using open rewrite recipe  org.openrewrite.java.spring.boot4.UpgradeSpringBoot_4_0